--- a/MU.GameTools.Squish/MU.GameTools.Squish.csproj
+++ b/MU.GameTools.Squish/MU.GameTools.Squish.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MU.GameTools.IO\MU.GameTools.IO.csproj" />
+  </ItemGroup>
+
 </Project>
