--- a/MU.GameTools.Prototype.Tod/MU.GameTools.Prototype.Tod.csproj
+++ b/MU.GameTools.Prototype.Tod/MU.GameTools.Prototype.Tod.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MU.GameTools.Common\MU.GameTools.Common.csproj" />
     <ProjectReference Include="..\MU.GameTools.IO\MU.GameTools.IO.csproj" />
   </ItemGroup>
 
